# ser_recicla_api

./: .env.example  .gitignore  Dockerfile  MIGRATION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: deps.py  main.py
app/api/v1/: api.py  dependencies.py
app/api/v1/endpoints/: auth.py  institutional.py  monitoring.py  recycling.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: __init__.py  institutional.py  recycling.py  user.py
app/repositories/: institutional.py  recycling.py  user.py
app/schemas/: __init__.py  institutional.py  recycling.py  user.py
app/services/: auth.py  institutional.py  recycling.py
examples/: api_usage.md
scripts/: dev-setup.bat  dev-setup.sh  init_db.py
tests/: conftest.py  test_auth.py  test_institutional.py  test_monitoring.py  test_recycling.py
